--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,7 @@ body {
   font-style: normal;
 }
 .container {
-  width: 100vw;
-  height: 65vh;
-  gap: 2rem;
-  display: flex;
-  justify-content: center;
+  padding-left: 190px;
 }
 .header {
   display: flex;
@@ -34,9 +30,10 @@ body {
 .header-nav nav ul {
   display: flex;
   width: 100vw;
-  column-gap: 2rem;
+  column-gap: 1rem;
   border-bottom: 1px solid #ddd9d9;
   align-items: end;
+  font-size: 13px;
 }
 .header-nav nav ul li {
   text-decoration: none;
@@ -84,7 +81,6 @@ body {
   padding: 5px;
   border-radius: 4px;
 }
-
 .search-bar {
   display: flex;
   border: 1px solid #dfe1e5;
@@ -111,4 +107,29 @@ body {
   border: 0 none;
   outline: 0;
   margin-left: 10px;
+}
+.results {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.8rem;
+}
+.result {
+}
+.result-title a {
+  font-size: 18px;
+  color: #37337b;
+  text-decoration: none;
+  font-weight: 400;
+}
+.result-url {
+  font-size: 11px;
+  font-weight: 400;
+
+  color: #0a351b;
+}
+.result-content {
+  max-width: 600px;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 400;
 }
